# my-connector-aoap

appconnector-apps/: .gitignore  README.md
appconnector-apps/AoapAccessory/: .classpath  AndroidManifest.xml
appconnector-apps/AoapAccessory/res/layout/: activity_aoap_accessory.xml
appconnector-apps/AoapAccessory/res/values/: strings.xml
appconnector-apps/AoapAccessory/src/com/jackskiss/aoapaccessory/: AoapAccessory.java
appconnector-apps/AoapAccessory/src/com/obigo/weblink/: MainWebLinkClient.java  RemoteWebLinkClient.java  RemoteWebLinkServer.java  StubWebLink.java  StubWebLinkServer.java  WebLink.java  WebLinkServer.java
appconnector-apps/AoapHost/: .classpath  AndroidManifest.xml
appconnector-apps/AoapHost/res/layout/: activity_aoap_host.xml
appconnector-apps/AoapHost/res/values/: strings.xml
appconnector-apps/AoapHost/res/xml/: device_filter.xml
appconnector-apps/AoapHost/src/com/jackskiss/aoaphost/: AoapHost.java
appconnector-apps/AoapHost/src/com/obigo/weblink/: BaseWebLinkClient.java  ImplWebLinkClient.java  ImplWebLinkServer.java  MainWebLinkListener.java  RemoteWebLink.java  WebLinkHelper.java
appconnector-apps/BaiduMusic/: .gitignore
appconnector-apps/BaiduMusic/src/: AndroidManifest.xml
appconnector-apps/BaiduMusic/src/res/anim/: animation_4_loading.xml
appconnector-apps/BaiduMusic/src/res/drawable/: list_selector.xml  progressbar_horizontal_red.xml  search_list_selector.xml  selector_btn_all.xml  selector_btn_back.xml  selector_btn_big_favorite.xml  selector_btn_big_next.xml  selector_btn_big_play.xml  selector_btn_big_pre.xml  selector_btn_big_stop.xml  selector_btn_favorite.xml  selector_btn_main_billboard.xml  selector_btn_main_favorite.xml  selector_btn_main_new.xml  selector_btn_main_popular.xml  selector_btn_main_radio.xml  selector_btn_main_theme.xml  selector_btn_menu.xml  selector_btn_menu_off.xml  selector_btn_menu_on.xml  selector_btn_next.xml  selector_btn_play.xml  selector_btn_pop.xml  selector_btn_pop_long.xml  selector_btn_pre.xml  selector_btn_repeat1.xml  selector_btn_repeatall.xml  selector_btn_repeatno.xml  selector_btn_search.xml  selector_btn_search_list.xml  selector_btn_shuffleoff.xml  selector_btn_shuffleon.xml  selector_btn_stop.xml  selector_menu.xml
appconnector-apps/BaiduMusic/src/res/layout/: category_view.xml  dialog.xml  favorite_item.xml  main_activity.xml  menu_button.xml  obigoprogressdialog.xml  playlist_activity.xml  playlist_item.xml  popup_favorite.xml  popup_main.xml  regulation_activity.xml  search_activity.xml  search_bar.xml  search_item.xml  search_selector.xml
appconnector-apps/BaiduMusic/src/res/values/: color.xml  dimens.xml  strings.xml  styles.xml
appconnector-apps/BaiduMusic/src/res/values-ko/: strings.xml
appconnector-apps/BaiduMusic/src/res/values-zh/: strings.xml
appconnector-apps/BaiduMusic/src/src/: host.properties
appconnector-apps/Radio/: .gitignore
appconnector-apps/Radio/src/Android/Test/: .classpath  .project  AndroidManifest.xml
appconnector-apps/Radio/src/OSX/: CMakeLists.txt  build.sh
appconnector-apps/Radio/src/OSX/src/: weblink_client_impl.c  weblink_client_impl.h  weblink_client_implx.c  weblink_client_main.c  weblink_client_main.h  weblink_listener_main.c  weblink_listener_main.h  weblink_server_impl.c  weblink_server_impl.h
appconnector-apps/Radio/src/iOS/WLRadio/WLRadio.xcodeproj/: project.pbxproj
appconnector-apps/WebLink/: .gitignore  WebLink.etch  generate.sh
appconnector-apps/etch/binding-c-ios-armv7s/include/.svn/: all-wcprops  entries
appconnector-apps/iAP-Test/: README.md
appconnector-apps/iAP-Test/EADemo/: EADSessionTransferViewController.h  EADSessionTransferViewController.m  EADemo-Info.plist  RootViewController.h  RootViewController.m
appconnector-apps/iAP-Test/EADemo/EADemo.xcodeproj/: project.pbxproj
appconnector-apps/iAP-Test/EADemo/RadioPlayer/: Radio.h  Radio.m
appconnector-apps/iAP-Test/EADemo/en.lproj/: EADSessionTransfer.xib  RootViewController.xib
appconnector-apps/iAP-Test/IPodTest/: AndroidManifest.xml
appconnector-apps/iAP-Test/IPodTest/res/layout/: activity_main.xml
appconnector-apps/iAP-Test/IPodTest/res/values/: strings.xml
appconnector-apps/tools/: ODEX-decompilation.txt
appconnector-sdk/: .gitignore  README.md
appconnector-sdk/etch/: build-etch-c-ios.sh  build-etch.sh  build-externals.sh
appconnector-sdk/etch/external-sources/: .gitignore
appconnector-sdk/etch/external-sources/CUnit-2.1-2/: configure
appconnector-sdk/etch/external-sources/apr/apr/: STATUS
appconnector-sdk/etch/external-sources/apr/apr-iconv/: STATUS
appconnector-sdk/etch/patch/: apply-patches.sh  create-patches.sh  patch.cfg
appconnector-sdk/etch/patch/patches/: apr_general.patch  binding_c_CMakeLists_txt.patch  binding_c_main_CMakeLists_txt.patch  binding_c_test_CMakeLists_txt.patch  etch_encoding_c.patch  example_mixin_CMakeLists_txt.patch  helloworld_c_CMakeLists_txt.patch  test_hashtable_c.patch
appconnector-sdk/etch/patch/tools/: patch_util.py
appconnector-sdk/etch/toolchains/: iOS-Device.cmake  iOS-Simulator.cmake
appconnector-sdk/etch/toolchains/Platform/: iOS.cmake
appconnector-sdk/etch/trunk/binding-c/runtime/c/src/main/: CMakeLists.txt
appconnector-sdk/etch/trunk/binding-c/runtime/c/src/main/common/: etch_encoding.c
appconnector-sdk/etch/trunk/build-support/: default_header.txt
appconnector-sdk/etch/trunk/examples/example_mixin/: CMakeLists.txt
merge-folder/: merge.txt
myetch/: .classpath  .project  AndroidManifest.xml
myetch/res/values/: strings.xml
sample/AoapDevice/: .project  AndroidManifest.xml
sample/AoapDevice/res/layout/: activity_main.xml
sample/AoapDevice/res/values/: strings.xml
sample/AoapDevice/res/xml/: accessory_filter.xml
sample/AoapHost/: .project  AndroidManifest.xml
sample/AoapHost/res/layout/: activity_main.xml
sample/AoapHost/res/values/: strings.xml
sample/AoapHost/res/xml/: device_filter.xml
sample/UsbHostController/: .cproject  .project  UsbHostController.cpp
sample/UsbHostController/Debug/: makefile  subdir.mk
(+815 files in other folders)
